@@ -2,7 +2,7 @@
 // $Id$
 
 #include "CoherentWrite_Test_Sender_exec.h"
-
+#include "tao/ORB_Core.h"
 #include "ace/Reactor.h"
 #include "ace/Log_Msg.h"
 
