@@ -5,7 +5,7 @@
 #include "ReadGet_Test_Receiver_exec.h"
 
 #include "ace/OS_NS_unistd.h"
-
+#include "tao/ORB_Core.h"
 #include "ace/Reactor.h"
 #include "ace/Log_Msg.h"
 
